Error Mitigation/MagiCoder/Data/javax_swing_table/javax_swing_tableOutputResult.txt
Sample: AbstractTableModel_1
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/AbstractTableModel_1.java:5: error: <anonymous AbstractTableModel_1$1> is not abstract and does not override abstract method getValueAt(int,int) in TableModel
        AbstractTableModel model = new AbstractTableModel() {
                                                            ^
1 error


================================================================

Sample: AbstractTableModel_3
----------------------------------------------------------------
================================================================

Sample: AbstractTableModel_7
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/AbstractTableModel_7.java:5: error: <anonymous AbstractTableModel_7$1> is not abstract and does not override abstract method getValueAt(int,int) in TableModel
        AbstractTableModel model = new AbstractTableModel() {
                                                            ^
1 error


================================================================

Sample: AbstractTableModel_8
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:2: error: cannot find symbol
import javax.swing.table.TableModelEvent;
                        ^
  symbol:   class TableModelEvent
  location: package javax.swing.table
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:11: error: MyTableModel is not abstract and does not override abstract method getValueAt(int,int) in TableModel
class MyTableModel extends AbstractTableModel {
^
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:16: error: cannot find symbol
        TableModelEvent event = new TableModelEvent(this, TableModelEvent.ALL_COLUMNS, TableModelEvent.ALL_COLUMNS, TableModelEvent.DATA_CHANGED);
        ^
  symbol:   class TableModelEvent
  location: class MyTableModel
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:16: error: cannot find symbol
        TableModelEvent event = new TableModelEvent(this, TableModelEvent.ALL_COLUMNS, TableModelEvent.ALL_COLUMNS, TableModelEvent.DATA_CHANGED);
                                    ^
  symbol:   class TableModelEvent
  location: class MyTableModel
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:16: error: cannot find symbol
        TableModelEvent event = new TableModelEvent(this, TableModelEvent.ALL_COLUMNS, TableModelEvent.ALL_COLUMNS, TableModelEvent.DATA_CHANGED);
                                                          ^
  symbol:   variable TableModelEvent
  location: class MyTableModel
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:16: error: cannot find symbol
        TableModelEvent event = new TableModelEvent(this, TableModelEvent.ALL_COLUMNS, TableModelEvent.ALL_COLUMNS, TableModelEvent.DATA_CHANGED);
                                                                                       ^
  symbol:   variable TableModelEvent
  location: class MyTableModel
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:16: error: cannot find symbol
        TableModelEvent event = new TableModelEvent(this, TableModelEvent.ALL_COLUMNS, TableModelEvent.ALL_COLUMNS, TableModelEvent.DATA_CHANGED);
                                                                                                                    ^
  symbol:   variable TableModelEvent
  location: class MyTableModel
./Data/javax_swing_table/javaFiles/AbstractTableModel_8.java:17: error: cannot find symbol
        for (TableModelListener l : getTableModelListeners()) {
             ^
  symbol:   class TableModelListener
  location: class MyTableModel
8 errors


================================================================

Sample: AbstractTableModel_9
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/AbstractTableModel_9.java:5: error: class MyTableModel is public, should be declared in a file named MyTableModel.java
public class MyTableModel extends AbstractTableModel {
       ^
./Data/javax_swing_table/javaFiles/AbstractTableModel_9.java:41: error: fireTableCellUpdated(int,int) in MyTableModel cannot override fireTableCellUpdated(int,int) in AbstractTableModel
    protected void fireTableCellUpdated(int row, int col) {
                   ^
  attempting to assign weaker access privileges; was public
2 errors


================================================================

Sample: AbstractTableModel_10
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/AbstractTableModel_10.java:7: error: <anonymous AbstractTableModel_10$1> is not abstract and does not override abstract method getValueAt(int,int) in TableModel
        AbstractTableModel model = new AbstractTableModel() {
                                                            ^
1 error


================================================================

Sample: AbstractTableModel_11
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/AbstractTableModel_11.java:7: error: <anonymous AbstractTableModel_11$1> is not abstract and does not override abstract method getValueAt(int,int) in TableModel
        AbstractTableModel model = new AbstractTableModel() {
                                                            ^
1 error


================================================================

Sample: DefaultTableModel_2
----------------------------------------------------------------
================================================================

Sample: JTableHeader_1
----------------------------------------------------------------
output:
./Data/javax_swing_table/javaFiles/JTableHeader_1.java:6: error: TableColumnModel is abstract; cannot be instantiated
        JTableHeader header = new JTableHeader(new TableColumnModel());
                                               ^
1 error


================================================================

Sample: JTableHeader_3
----------------------------------------------------------------
================================================================

